objects/Internal_Change_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affected Membership</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Internals Changes Logs</relationshipLabel>
        <relationshipName>Internals_Changes_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Internals Changes Logs</relationshipLabel>
        <relationshipName>Internals_Changes_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Date__c</fullName>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vlocity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Internal Change Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Asset__c</columns>
        <columns>Change_Date__c</columns>
        <columns>Change_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Internal Change Log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internals Changes Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>